Fix different row spacing
There was a margin on any .row inside #sponsors that threw off a bunch of spacing

--- a/css/app.css
+++ b/css/app.css
@@ -374,12 +374,14 @@ button.apply {
   visibility: hidden;
 }
 
-#sponsors .row {
+#sponsors .sponsor-row {
   margin-top: 2rem;
 }
 
 #sponsors img {
   margin:auto;
+  height: 75%;
+  width: 75%;
   -moz-filter: grayscale(100%);
   -ms-filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
